// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchManager matches snapshot if obs status is CONNECTED 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"layout horizontal\\">
  <div class=\\"max-width\\">
    <score-display-stub></score-display-stub>
    <active-color-toggles-stub class=\\"m-t-8\\"></active-color-toggles-stub>
    <div class=\\"ipl-space color-dark m-t-8\\" data-v-11cc5f1c=\\"\\">
      <div class=\\"layout horizontal m-b-8\\">
        <ipl-button-stub label=\\"Start\\" color=\\"green\\" disabled=\\"true\\" async=\\"true\\" progressmessage=\\"Starting...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" data-test=\\"start-game-button\\"></ipl-button-stub>
        <ipl-button-stub label=\\"End\\" color=\\"red\\" disabled=\\"false\\" async=\\"true\\" progressmessage=\\"Ending...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" class=\\"m-l-8\\" data-test=\\"end-game-button\\"></ipl-button-stub>
      </div>
      <ipl-button-stub label=\\"Show casters\\" color=\\"blue\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Message sent!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"true\\" disableonsuccess=\\"true\\" href=\\"\\" data-test=\\"show-casters-button\\"></ipl-button-stub>
    </div>
  </div>
  <ipl-expanding-space-group-stub class=\\"max-width m-l-8\\"></ipl-expanding-space-group-stub>
</div>
<set-editor-stub class=\\"m-t-8\\"></set-editor-stub>"
`;

exports[`MatchManager matches snapshot if obs status is CONNECTING 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"layout horizontal\\">
  <div class=\\"max-width\\">
    <score-display-stub></score-display-stub>
    <active-color-toggles-stub class=\\"m-t-8\\"></active-color-toggles-stub>
    <div class=\\"ipl-space color-dark m-t-8\\" data-v-11cc5f1c=\\"\\">
      <!--v-if-->
      <ipl-button-stub label=\\"Show casters\\" color=\\"blue\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Message sent!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"true\\" href=\\"\\" data-test=\\"show-casters-button\\"></ipl-button-stub>
    </div>
  </div>
  <ipl-expanding-space-group-stub class=\\"max-width m-l-8\\"></ipl-expanding-space-group-stub>
</div>
<set-editor-stub class=\\"m-t-8\\"></set-editor-stub>"
`;

exports[`MatchManager matches snapshot if obs status is NOT_CONNECTED 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"layout horizontal\\">
  <div class=\\"max-width\\">
    <score-display-stub></score-display-stub>
    <active-color-toggles-stub class=\\"m-t-8\\"></active-color-toggles-stub>
    <div class=\\"ipl-space color-dark m-t-8\\" data-v-11cc5f1c=\\"\\">
      <!--v-if-->
      <ipl-button-stub label=\\"Show casters\\" color=\\"blue\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Message sent!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"true\\" href=\\"\\" data-test=\\"show-casters-button\\"></ipl-button-stub>
    </div>
  </div>
  <ipl-expanding-space-group-stub class=\\"max-width m-l-8\\"></ipl-expanding-space-group-stub>
</div>
<set-editor-stub class=\\"m-t-8\\"></set-editor-stub>"
`;
